# FiniteGraphs

./: .gitignore  3_meta.py  README.md  alg.py  alg_for_graphs.py  alg_for_metagraphs.py  alg_with_files.py  algorithms.py  graph.py  graphs.ipynb  main.py  meta_graph.txt  nodes.csv  pyproject.toml  soc-wiki-Vote_test.txt  socfb-Middlebury45_test.txt  socfb-Reed98_test.txt  test.txt  test_edges.csv  test_extremale.txt  test_graph_1.txt  Полученные результаты.docx  Список ребер метаграфа.xlsx
