[tool.poetry]
name = "finite-graphs"
version = "0.1.0"
description = ""
authors = ["Anton Kondrahin <Kondrahin210@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
notebook = "^6.4.11"
pandas = "^1.4.2"
matplotlib = "^3.po5.1"
sklearn = "^0.0"
seaborn = "^0.11.2"
scipy = "^1.8.0"
networkx = "^2.8"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

